syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hpcclab.oaas.proto.v2";

package oprc;

message ObjectInvocationRequest{
    uint32 partition_id = 1;
    uint64 object_id = 2;
    string cls_id = 3;
    string fn_id = 4;
    map<string, string> options = 5;
    bytes payload = 6;
}

message InvocationRequest{
    uint32 partition_id = 1;
    string cls_id = 3;
    string fn_id = 4;
    map<string, string> options = 5;
    bytes payload = 6;
}


message InvocationResponse{
    optional bytes payload = 1;
    ResponseStatus status = 2;
    map<string, string> headers = 3;
    string invocation_id = 4;
}

enum ResponseStatus{
    OKAY=0;
    INVALID_REQUEST=1;
    APP_ERROR=2;
    SYSTEM_ERROR=3;
}

service OprcFunction {
    rpc InvokeFn(InvocationRequest) returns (InvocationResponse);
    rpc InvokeObj(ObjectInvocationRequest) returns (InvocationResponse);
}